--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,19 @@
 {
   "name": "app-chart",
   "version": "0.0.1",
+  "authors": [
+    "Chris McKenzie <chris@kbsurfer.com>"
+  ],
+  "license": "MIT",
+  "homepage": "http://appbloks.github.io/app-chart/components/app-chart/",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "description": "An element for building charts using rickshaw and d3",
   "keywords": "polymer, web-components, chart, d3, rickshaw, reporting",
   "main": "app-chart.html",
   "dependencies": {
